raw-manifests/buooh-admin/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
  namespace: buooh
spec:
  replicas: 2
  selector:
    matchLabels:
      app: admin
      workload: buooh
  template:
    metadata:
      labels:
        app: admin
        workload: buooh
    spec:
      containers:
        - name: nginx
          image: "public.ecr.aws/nginx/nginx"
          ports: 
          - containerPort: 3005
          resources:
            requests:
              cpu: "1"
              memory: "64Mi"
