raw-manifests/buooh-admin/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: buooh
spec:
  selector:
    app: admin
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 3005
    targetPort: 3005
