raw-manifests/buooh-admin/admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata: 
  name: alb-ingress
  namespace: buooh
  annotations: 
    kubernetes.io/ingress.class: alb  
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
  - http:
      paths:      
      - backend:
          service:
            name: admin-service
            port: 
              number: 8081
        path: /
        pathType: Prefix
